--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "sequelize-cli": "^6.6.0"
   }
 }
